--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bushwick in the U.S. Census</title>
+        <title>Bushwick and the U.S. Census</title>
         <link href="css/style.css" rel="stylesheet"></link>
         <script type="text/javascript" src="d3/d3.v3.js"></script>
         <script type="text/javascript" src="d3/topojson.v1.min.js"></script>
     </head>
     <body>
       <script type="text/javascript" src="js/main.js"></script>
+      <h1>Bushwick and the U.S. Census</h1>
+      <p>A few weeks ago, one XXXX posted an article on the Bushwick Daily which used census data to support pro-gentrification, white supremacist viewpoints. The article attempted to use "data" to suggest that gentrification in Bushwick isn't happening. It is retrogressive predilection, riddled with errors, being disguised as journalism: want to give your false and dangerous ideology some creditably (and maybe get it published too)? Just whip up some quick charts in excel and hope that one one notices...  </p>
+      <p>Undoubtedly, numbers and maps have power. This is in part why I helped start the Bushwick Community Map -- to give anti-gentrification and housing advocates the same numerical & technical tools that real estate has.</p>
+
+      <p>Following this post, Anthony wrote a fabulous response that I encourage you to read. However, I imagine that some readers out there might have a lagging thought in back of your head: <em>but what about those numbers?</em></p>
+
+      <p>This is first in a series of blog posts that will examine the trends the census actually shows in Bushwick and North Brooklyn.</p>
+      
+      <h3> In 10 years, Bushwick gained 7500 White new white residents and 6000 new housing units.</h3>
+
+      <p> It's obvious to anyone who'se spent more than 10 minutes in Bushwick over the past 5 years of the changes that's occurred. Part of me doesn't want to spend the effort to prove that 'gentrification exists' through data when one  could just walk down the street and talk to nearly anyone. Still, there are useful patterns that can be drawn from the census, when done in a careful and honest way. </p>
+
+      <p>One critical problem with the Bushwick Daily article is it's reliance outdated data. It's true that it will be hard to track some aspects of neighborhood change due to the temporal nature  of the census. Nonetheless, certain demographics changes from 2000 to 2010 clearly show nascent gentrification trends that are widespread today.</p>
+
+      <blockquote>In 10 years, Bushwick's white population <b>triples</b>. In 2000 only 3% of Bushwick is White. By 2010, Bushwick has grown to 8.5% white.</blockquote>
+
+      <div id="white-pop-map"></div>
+
+      <p>These changes occurs largely in the north part of Bushwick, as if spilling over from Williamsburg.</p>
+
+      <p>It's true that the Hispanic population grew slightly from around 70,000 to around 73,500 - an increase of about 5% -- but that's way under what one might expect. In New York City the Hispanic/Latino population grew from 2.2 Million to 2.8 Million between 2000 and 2010, an increase of nearly 30%. Bushwick, instead of following that trend, showed only an increase of 5%. Why? The growing gentrification and raising rents of bushwick has prevented the growth of the Hispanic/Latino population. The housing that should have been rented to people of color have instead been taken over by Whites.</p>
+
+      <p>NYC's white population has declined, slightly from 2.8 Million in 2000 to 2.7 Million in 2010. Bushwick has defied that trend with an exploding tripling of the white population.</p>
+
+      <p>So certainly, Bushwick needs affordable housing for the growing Hispanic/Latino population of New York, but why then does it seem that nearly all of new-buildinghousing is going to Whites who didn't live in bushwick before? All signs point to a housing and planning system that promotes gentrification. </p>
+
+      <p>...More dispatches from the census coming soon!</p>
+      
     </body>
 </html>  
