toggle between years

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <p>One critical problem with the Bushwick Daily article is it's reliance outdated data. It's true that it will be hard to track some aspects of neighborhood change due to the temporal nature  of the census. Nonetheless, certain demographics changes from 2000 to 2010 clearly show nascent gentrification trends that are widespread today.</p>
 
       <blockquote>In 10 years, Bushwick's white population <b>triples</b>. In 2000 only 3% of Bushwick is White. By 2010, Bushwick has grown to 8.5% white.</blockquote>
-
-      <div id="white-pop-map"></div>
+      <h3 id="white-pop-year-toggle">Switch between years</h3>
+      <div id="white-pop-map">
+      </div>
 
       <p>These changes occurs largely in the north part of Bushwick, as if spilling over from Williamsburg.</p>
 
